force-app/main/default/objects/BSF_setting__c/fields/Donor_Eligibility_Day_for_WB__c.field-meta.xml
<CustomField>
    <fullName>Donor_Eligibility_Day_for_WB__c</fullName>
    <description>Created for HRP-13039</description>
    <label>Donor Eligibility Day for WB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>