force-app/main/default/objects/BSF_setting__c/fields/Donor_Eligibility_Msg__c.field-meta.xml
<CustomField>
    <fullName>Donor_Eligibility_Msg__c</fullName>
    <label>Donor Eligibility Msg</label>
    <type>TextArea</type>
</CustomField>