force-app/main/default/objects/BSF_setting__c/fields/Is_Donor_Eligibility_Msg_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Donor_Eligibility_Msg_Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Donor Eligibility Msg Needed?</label>
    <type>Checkbox</type>
</CustomField>