force-app/main/default/objects/BSF_setting__c/fields/LastId__c.field-meta.xml
<CustomField>
    <fullName>LastId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>LastId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>